[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://anims/player/player_idle.tres" type="Animation" id=2]
[ext_resource path="res://assets/player/player.png" type="Texture" id=3]
[ext_resource path="res://anims/player/player_run.tres" type="Animation" id=4]
[ext_resource path="res://anims/player/death.tres" type="Animation" id=5]
[ext_resource path="res://assets/general/circle.png" type="Texture" id=6]
[ext_resource path="res://assets/general/white.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.0453, 8.4556 )

[sub_resource type="CircleShape2D" id=2]
radius = 34.2771

[node name="player" type="Node2D"]
z_index = 5
script = ExtResource( 1 )

[node name="body" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="body"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 3
vframes = 3

[node name="shadow" type="Sprite" parent="body/Sprite"]
self_modulate = Color( 0.129412, 0.129412, 0.129412, 0.278431 )
show_behind_parent = true
position = Vector2( -1.23782, 8.16025 )
scale = Vector2( 0.175, 0.05 )
z_index = -3
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2( -1.01109, 7.37652 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="body"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/Area2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = ExtResource( 5 )
anims/idle = ExtResource( 2 )
anims/run = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="cover" type="Sprite" parent="CanvasLayer"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 512.837, 300.702 )
scale = Vector2( 33.0523, 19.7939 )
z_index = 20
texture = ExtResource( 7 )

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="body/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="body/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="CanvasLayer/Timer" to="." method="_on_Timer_timeout"]
